# agent-personas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  quality.yml  release.yml
agent_personas/: __init__.py  async_utils.py  benchmarking.py  cli.py  config_builder.py  exceptions.py  logging_config.py  templates.py
agent_personas/ab_testing/: __init__.py  experiment_designer.py
agent_personas/analytics/: __init__.py  usage_tracker.py
agent_personas/async_support/: __init__.py  async_persona_manager.py
agent_personas/behaviors/: __init__.py  behavior_engine.py  behavior_rule.py  context_manager.py  response_patterns.py
agent_personas/cache/: __init__.py  memory_cache.py  persona_cache.py  trait_cache.py
agent_personas/composition/: __init__.py  blender.py  compositor.py
agent_personas/config/: __init__.py  advanced_settings.py  defaults.py  settings.py  validators.py
agent_personas/conversation/: __init__.py  dialogue_flow.py  language_patterns.py  style_manager.py  tone_adapter.py
agent_personas/conversation_adapters/: __init__.py  style_adapter.py
agent_personas/core/: __init__.py  manager.py  persona.py  registry.py
agent_personas/data_processing/: __init__.py  transformers.py
agent_personas/emotional_modeling/: __init__.py  emotion_engine.py  emotional_state.py
agent_personas/emotions/: __init__.py  emotion_engine.py  emotion_model.py  emotional_responses.py  mood_tracker.py
agent_personas/evaluation/: __init__.py  persona_evaluator.py
agent_personas/export_import/: __init__.py  exporters.py
agent_personas/extensions/: __init__.py  base_plugin.py
agent_personas/memory_integration/: __init__.py  persona_memory.py
agent_personas/monitoring/: __init__.py  health_monitor.py  performance.py
agent_personas/multilingual/: __init__.py  multilingual_persona.py
agent_personas/persistence/: __init__.py  file_storage.py
agent_personas/plugins/: __init__.py  plugin_manager.py
agent_personas/recovery/: __init__.py  circuit_breaker.py  fallback_handler.py
agent_personas/security/: __init__.py  input_sanitizer.py  rate_limiter.py
agent_personas/switching/: __init__.py  switch_manager.py
agent_personas/templates/: __init__.py  archetype.py  builder.py  presets.py  template.py
agent_personas/tests/: __init__.py
agent_personas/tests/integration/: test_full_workflow.py
agent_personas/tests/performance/: test_performance.py
agent_personas/tests/unit/: test_composition.py  test_templates.py  test_versioning.py
agent_personas/traits/: __init__.py  trait.py  trait_conflicts.py  trait_group.py  trait_manager.py
agent_personas/utils/: __init__.py  caching.py  data_validation.py  decorators.py  helpers.py  logging.py  metrics.py  security.py  serialization.py  validation.py
agent_personas/validation/: __init__.py  business_validators.py  data_validators.py  input_validators.py
agent_personas/versioning/: __init__.py  version_manager.py
docs/: API.md  QUICKSTART.md  api_reference.md  user_guide.md
examples/: advanced_behavior.py  basic_usage.py  integration_example.py  persona_templates.json  personas.json
tests/: __init__.py  test_cache_memory.py  test_config_validators.py  test_core_manager.py  test_core_persona.py  test_emotions.py  test_exceptions.py  test_integration_full.py  test_utils_helpers.py  test_validation.py
